loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:5: error: not found: value pickUpBaggle
pickUpBaggle() 
^